<resources>
    <string name="app_name">Project</string>
    <string name="welcome_message_txt">Welcome Home</string>
    <string name="kitchen_txt">Kitchen</string>
    <string name="livingroom_txt">Living Room</string>
    <string name="garage_txt">Garage</string>
    <string name="status_txt">Home Status</string>
    <string name="appinfo">Application Info</string>
    <string name="back_txt">Back</string>
    <string name="exit_txt">Refresh Data</string>
    <string name="viewall_txt">View All</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
